# perp

./: Cargo.toml
contracts/oracle/: Cargo.toml  README.md
contracts/oracle/src/: contract.rs
contracts/perp/: Cargo.toml  README.md
contracts/perp/src/: constants.rs  contract.rs  error.rs  events.rs  lib.rs  msgs.rs  query.rs  state.rs  trade.rs  tutil.rs  util.rs  utils.rs
contracts/perp/src/borrowing/: mod.rs  state.rs
contracts/perp/src/fees/: mod.rs  state.rs
contracts/perp/src/pairs/: state.rs
contracts/perp/src/price_impact/: mod.rs  state.rs
contracts/perp/src/trading/: state.rs  utils.rs
contracts/perp/tests/: app.rs  simple.rs
contracts/referrals/: Cargo.toml  README.md
contracts/referrals/src/: contract.rs  error.rs  lib.rs  query.rs  state.rs  utils.rs
scripts/: Cargo.toml  wasm_out.rs
