[workspace]
members = ["scripts", "contracts/perp"]
resolver = "2"

# Dependencies can be inherited from a workspace by specifying the dependency in
# the `[workspace.dependencies]` table. To use workspace crates, add them to the
# `[dependencies]` table with `workspace = true`.
# ```
# anyhow = { workspace = true }
# ```
[workspace.dependencies]
# serde
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
serde_json = "1.0.108"

# deps: packages
prost = "0.12.3"
prost-types = "0.12.3"

# deps: CosmWasm
cosmwasm-std = { version = "2.0.2", features = ["stargate", "staking"] }
cosmwasm-schema = "2.0.2"
cw-storage-plus = { version = "2.0.0" }
cw-multi-test = { version = "2.0.1" }
cw-utils = { version = "2.0.0" }

# deps: cw-plus
cw2 = { version = "2.0.0" }
cw3 = { version = "2.0.0" }
cw3-fixed-multisig = { version = "2.0.0", features = ["library"] }
cw4 = { version = "2.0.0" }
cw20 = { version = "2.0.0" }
cw4-group = { version = "2.0" }
cw20-base = { version = "2.0" }
bash-rs = { path = "packages/bash-rs" }

# deps: else
anyhow = "1"
thiserror = "1.0.50"
assert_cmd = "2"
lazy_static = "1.4.0"
clap = { version = "4.4.7", features = ["derive", "cargo", "env", "string"] }
schemars = "0.8.15"
home = "0.5"
toml = "0.8"
quote = "1.0"
proc-macro2 = "1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
