[workspace]
members = ["scripts", "contracts/perp", "contracts/oracle", "packages/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
serde_json = "1.0.108"

prost = "0.12.3"
prost-types = "0.12.3"
oracle = { path = "contracts/oracle", features = ["library"] }

cosmwasm-std = "2.0.2"
cosmwasm-schema = "2.0.2"
cw-storage-plus = { version = "2.0.0" }

cw-utils = { version = "2.0.0" }
nibiru-ownable = { version = "0.1.0" }

cw2 = { version = "2.0.0" }
anyhow = "1"
thiserror = "1.0.57"
assert_cmd = "2"
lazy_static = "1.4.0"
clap = { version = "4.4.7", features = ["derive", "cargo", "env", "string"] }
schemars = "0.8.15"
home = "0.5"
toml = "0.8"
quote = "1.0"
proc-macro2 = "1.0"
test-app = { path = "packages/test-app" }
bash-rs = { path = "packages/bash-rs" }

syn = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
