[package]
name = "perp"
version = "0.1.0"
edition = "2021"

[features]
# features.library: Use the library feature to disable all
# instantiate/execute/query exports. This is necessary use this as a dependency
# for another smart contract crate.
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
oracle = { workspace = true }
nibiru-ownable = { workspace = true }
nibiru-std = { workspace = true }

[dev-dependencies]
test-app = { workspace = true }
oracle = { workspace = true }
referrals = { workspace = true }
cw-multi-test = { workspace = true }
